kubernetes/17-network-policy-eks/netpol/block-ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: beskar
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
